# codewars-2024-final-round-codexpress

./: .gitignore  API.md  README.md
backend/: Cargo.toml  database.db
backend/crates/xpres/: Cargo.toml
backend/crates/xpres-auth/: Cargo.toml
backend/crates/xpres-auth/src/: cookies.rs  error.rs  lib.rs  prelude.rs
backend/crates/xpres-auth/src/db/: mod.rs
backend/crates/xpres-auth/src/db/sqlite/: mod.rs  sql.rs
backend/crates/xpres-auth/src/forms/: mod.rs
backend/crates/xpres-auth/src/language/: en.rs  mod.rs
backend/crates/xpres-auth/src/user/: auth.rs  database.rs  datastore.rs  mod.rs  user_impl.rs  users.rs
backend/crates/xpres/src/: index.html  main.rs
backend/templates/: auth.html.tera  index.html.tera  ticket.html.tera
frontend/view/: home-page.css  index.html
frontend/view/auth/: auth.css  auth.html
frontend/view/user-frontend/ticket-management/: ticket-management.css  ticket-management.html
