[package]
name = "xpres-auth"
version = "0.1.0"
edition = "2021"


[dependencies]
rand = ">=0.8.5"
rust-argon2 = ">=1.0.0"
lazy_static = ">=1.4.0"
regex = ">=1.5.6"
chashmap = ">=2.2.2"
thiserror = ">=1.0.31"
async-trait = ">=0.1.56"
fehler = ">=1.0.0"
chrono = ">=0.4.19"
validator = { version = ">=0.15.0", features = ["derive"] }
futures = ">=0.3.21"

[dependencies.serde_json]
workspace = true

[dependencies.sqlx]
workspace = true

[dependencies.rocket]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.tokio]
workspace = true

# [dev-dependencies]
# tokio-postgres= "0.7.6"


# [dev-dependencies.rocket]
# version = ">=0.5.0"
# features = ["secrets", "json"]

# [dev-dependencies.redis]
# version = "0.21.5"
# features = ["aio", "tokio-comp"]


# [dev-dependencies.rocket_dyn_templates]
# version = ">=0.1.0"
# features = ["tera"]


# [dev-dependencies.sqlx]
# version = ">=0.6.0"
# features = ["runtime-tokio-rustls"]

# [dev-dependencies.rocket_auth]
# path = "../rocket_auth"
# features = [
#     "sqlx-sqlite",
#     "sqlx-postgres",
#     "sqlx-mysql",
#     "redis",
#     "tokio-postgres",
#     "rusqlite",
# ]
