[package]
name = "xpres"
version = "0.1.0"
edition = "2021"

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]

[dependencies.serde_json]
workspace = true

[dependencies.sqlx]
workspace = true

[dependencies.rocket]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.xpres-auth]
path = "../xpres-auth"